frame/support/test/tests/decl_storage_ui/config_get_duplicate.stderr
error: `config()`/`get()` with the same name already defined.
  --> $DIR/config_get_duplicate.rs:30:21
   |
30 |         pub Value2 config(value): u32;
   |                           ^^^^^
